# KMSearch

./: .gitignore  LICENSE  README.md  README_ja.md  THIRD-PARTY-NOTICES.md  build.bat  build.sh  build_nuitka.bat  build_nuitka.sh  build_pyinstaller.bat  build_pyinstaller.sh  config.toml  kmsearch.bat  kmsearch.sh  kmsearch.sqlite  pyproject.toml  pyproject_cuda.toml
cmds/: build_nuitka.bat
samples/: sample_gui.py  sample_gui2.py
src/: database_engine.py  explorefiles.py  extract.py  main.py  searchfiles.py  showdocument.py  updatedata.py
src/extractor/: __init__.py  excelcell.py  excelsharp.py  extractor.py  imageocr.py  ocr.py  pdfocr.py  pdftext.py
src/models/: __init__.py  document.py  extract.py  file.py  filepath.py  ocr.py  ocrtext.py  page.py  search.py
src/services/: excel.py  explorefiles.py  ocrimage.py  pdftoimage.py  searchcsv.py  searchfile.py  searchfiles.py  searchword.py  showdocument.py  updatedata.py
src/utils/: config.py  filehash.py  formulaparser.py  jsonencoder.py  multitosingleimages.py  ocrimage.py  pdftoimage.py  search.py
